# fooqueue

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
src/: consumer.rs  lib.rs  node.rs  producer.rs  queue.rs
