[package]
name = "fooqueue"
version = "0.1.0"
edition = "2024"
authors = ["flippette <me@flippo.cc>"]
license = "MIT OR Apache-2.0"
description = "a simple, lock-free FIFO queue"
keywords = [
  "concurrent",
  "lock-free",
  "fifo",
  "queue",
  "no-std",
]

[features]
default = ["alloc", "allocator-api2"]
alloc = ["allocator-api2?/alloc"]
allocator-api2 = ["dep:allocator-api2"]
nightly = []

[dependencies]
portable-atomic = "1"

[dependencies.allocator-api2]
version = "0.3"
optional = true
default-features = false
